[gd_scene load_steps=5 format=2]

[ext_resource path="res://Card.tscn" type="PackedScene" id=1]
[ext_resource path="res://hand.gd" type="Script" id=2]
[ext_resource path="res://chipsStack6.ogg" type="AudioStream" id=3]
[ext_resource path="res://cardFan1.ogg" type="AudioStream" id=4]

[node name="Hand" type="Node2D"]
position = Vector2( 112, 32 )
script = ExtResource( 2 )

[node name="Card1" parent="." instance=ExtResource( 1 )]

[node name="Card2" parent="." instance=ExtResource( 1 )]
position = Vector2( 104, 48 )

[node name="Card3" parent="." instance=ExtResource( 1 )]
position = Vector2( 176, 48 )

[node name="Card4" parent="." instance=ExtResource( 1 )]
position = Vector2( 248, 48 )

[node name="Card5" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 48 )

[node name="Card6" parent="." instance=ExtResource( 1 )]
position = Vector2( 392, 48 )

[node name="PlayerTurnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="ShuffleSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
